2002-01-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&parse_arguments): Use a more GNUish error message
	on wrong options.

2002-01-20  Tom Tromey  <tromey@redhat.com>

	Fix for PR automake/231:
	* m4/gcj.m4 (AM_PROG_GCJ): Use _AM_DEPENDENCIES(GCJ).
	* m4/depend.m4: Document `GCJ'.

	For PR automake/224:
	* tests/Makefile.am (TESTS): Added pr224.test.
	* tests/pr224.test: New file.
	* lib/depcomp: Fixed computation of depfile.
	* lib/am/depend2.am: Use %DEPBASE%, not $(DEPDIR).
	* automake.in (handle_single_transform_list): Only reject `..'
	component for Java.  Put dependencies in directory near object.
	(handle_languages): Set DEPBASE.  Handle de-ansi-fication.

2002-01-20  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/defs: Export AUTOMAKE and ACLOCAL.

2002-01-19  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for PR automake/204:
	* tests/pr204.test: New file.
	* tests/Makefile.am (TESTS): Add it.
	* automake.in (handle_single_transform_list): Don't distribute
	sources derived from non-distributed sources.

2002-01-18  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for PR automake/229:
	* tests/pr229.test: New file.
	* tests/Makefile.am (TESTS): Add it.
	* automake.in (scan_one_autoconf_file): Recognize AC_CYGWIN,
	AC_EMXOS2, and AC_MINGW32.

2002-01-18  Tom Tromey  <tromey@redhat.com>

	* tests/cond7.test: Fix test bug exposed by copyright update.

	For PR automake/288:
	* automake.in (lang_c_rewrite): Don't prepend directory to base if
	directory is `.'.  Also, properly compute de_ansi_files entry in
	subdir-objects case
	* tests/Makefile.am (TESTS): Added ansi7.test.
	* tests/ansi7.test: New file.

	* aclocal.in (parse_arguments): Added 2002.
	(write_aclocal): Likewise.
	(parse_arguments): Updated my email address.
	* automake.in (gen_copyright): Added 2002.
	(version): Likewise.  Also, changed my email address.

	* configure.in (APIVERSION): Refined definition.

2002-01-18  Tom Tromey  <tromey@redhat.com>

	* missing: Updated.