@@ -891,13 +891,13 @@ register_language ('name' => 'lexxx',
 # Assembler.
 register_language ('name' => 'asm',
 		   'Name' => 'Assembler',
-		   'config_vars' => ['AS', 'ASFLAGS'],
+		   'config_vars' => ['CCAS', 'CCASFLAGS'],
 
-		   'flags' => 'ASFLAGS',
+		   'flags' => 'CCASFLAGS',
 		   # Users can set AM_ASFLAGS to includes DEFS, INCLUDES,
 		   # or anything else required.  They can also set AS.
-		   'compile' => '$(AS) $(AM_ASFLAGS) $(ASFLAGS)',
-		   'compiler' => 'ASCOMPILE',
+		   'compile' => '$(CCAS) $(AM_CCASFLAGS) $(CCASFLAGS)',
+		   'compiler' => 'CCASCOMPILE',
 		   'compile_flag' => '-c',
 		   'extensions' => ['.s', '.S'],
 
