@@ -1415,8 +1415,8 @@ variable @code{lispdir} to the full path to Emacs' site-lisp directory.
 
 @item AM_PROG_AS
 Use this macro when you have assembly code in your project.  This will
-choose the assembler for you (by default the C compiler), and will set
-@code{ASFLAGS} if required.
+choose the assembler for you (by default the C compiler) and set
+@code{CCAS}, and will also set @code{CCASFLAGS} if required.
 
 @item AM_PROG_CC_C_O
 This is like @code{AC_PROG_CC_C_O}, but it generates its results in the
@@ -2129,7 +2129,7 @@ per-library) basis.  A single source file can be included in several
 programs, and it will potentially be compiled with different flags for
 each program.  This works for any language directly supported by
 Automake.  The flags are @samp{_CFLAGS}, @samp{_CXXFLAGS},
-@samp{_OBJCFLAGS}, @samp{_YFLAGS}, @samp{_ASFLAGS}, @samp{_FFLAGS},
+@samp{_OBJCFLAGS}, @samp{_YFLAGS}, @samp{_CCASFLAGS}, @samp{_FFLAGS},
 @samp{_RFLAGS}, and @samp{_GCJFLAGS}.
 
 When using a per-program compilation flag, Automake will choose a
@@ -2402,17 +2402,17 @@ The command used to actually link a C++ program.
 
 Automake includes some support for assembly code.
 
-The variable @code{AS} holds the name of the compiler used to build
+The variable @code{CCAS} holds the name of the compiler used to build
 assembly code.  This compiler must work a bit like a C compiler; in
 particular it must accept @samp{-c} and @samp{-o}.  The value of
-@code{ASFLAGS} is passed to the compilation.
-@vindex AS
-@vindex ASFLAGS
+@code{CCASFLAGS} is passed to the compilation.
+@vindex CCAS
+@vindex CCASFLAGS
 
-You are required to set @code{AS} and @code{ASFLAGS} via
+You are required to set @code{CCAS} and @code{CCASFLAGS} via
 @file{configure.in}.  The autoconf macro @code{AM_PROG_AS} will do this
-for you.  Unless they are already set, it simply sets @code{AS} to the C
-compiler and @code{ASFLAGS} to the C compiler flags.
+for you.  Unless they are already set, it simply sets @code{CCAS} to the
+C compiler and @code{CCASFLAGS} to the C compiler flags.
 
 Only the suffixes @samp{.s} and @samp{.S} are recognized by
 @code{automake} as being files containing assembly code.
