@@ -1,4 +1,4 @@
-@set UPDATED 20 January 2002
+@set UPDATED 21 January 2002
 @set UPDATED-MONTH January 2002
 @set EDITION 1.5c
 @set VERSION 1.5c
