@@ -24,6 +24,8 @@ New in 1.5c:
   You can now use `AC_INIT(package,version) AM_INIT_AUTOMAKE' instead.
   It is also possible to pass a list of global Automake options as
   first argument to this new form of AM_INIT_AUTOMAKE.
+* Compiler-based assembler is now called `CCAS'; people expected `AS'
+  to be a real assembler.
 
 New in 1.5:
 * Support for `configure.ac'.
