@@ -1,3 +1,11 @@
+2002-01-21  Tom Tromey  <tromey@redhat.com>
+
+	* automake.texi (Macros): Updated for new variable names.
+	(Program and Library Variables): Likewise.
+	(Assembly Support): Likewise.
+	* m4/as.m4: Use CCAS and CCASFLAGS.
+	* automake.in (asm): Use CCAS and CCASFLAGS.
+
 2002-01-21  Akim Demaille  <akim@epita.fr>
 
 	* automake.in (&parse_arguments): Use a more GNUish error message
